# Cloud-Point-Renderer

./: CMakeLists.txt  README.md  build.sh  cleanmake.sh  run.sh
dependencies/include/glad/: glad.h
include/: Camera.hpp  CloudPointGenerator.hpp  Engine.hpp  InterfaceVertexObject.hpp  ShaderProgram.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
shaders/: Point.vert
src/: Camera.cpp  CloudPointGenerator.cpp  Engine.cpp  ShaderProgram.cpp  VertexArrayObject.cpp  main.cpp
